--- a/resume.html
+++ b/resume.html
@@ -66,7 +66,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline wow zoomIn"><span>薛 焱</span></h1>
-            <h3 class="wow fadeInUp">我是一个 <span>职业iOS开发者</span> <br><br> <span>业余 UWP 开发者</span><br><br> 善于通过<span> Objective-C </span> 和 <span> Swift </span>创建应用。</h3>
+            <h3 class="wow fadeInUp">我是一个 <span>职业iOS开发者</span> <br><br> <span>业余 Android，H5，Flutter 开发者</span><br><br> 善于通过<span> Objective-C </span> 和 <span> Swift </span>创建iOS应用。</h3>
             <hr />
          </div>
       </div>
@@ -117,11 +117,12 @@
           <div class="arrow-left"></div>
 
             <p>
-             1、本人性格开朗，善于沟通交流，对编程方面的知识抱有极大的兴趣和学习热情，喜欢和同行交流与分享技术； <br>
-             2、对iOS开发有浓厚的兴趣，喜欢浏览CocoaChina，CSDN，code4App，开源中国，博客园，Swift中国，swiftgg等技术网站，来提升自己的技术水平； <br>
-             3、有多个上线项目的经验，有较强的问题分析和bug调试的能力； <br>
-             4、具有较强的抗压能力和学习能力，对待工作认真负责，能够及时的完成公司交给的任务。<br>
-             5、个人网站：<a target="_blank" href="http://fishyan.me">http://fishyan.me</a>
+            1、本人性格开朗，善于沟通交流，对编程方面有极大的兴趣和学习热情，喜欢和同行交流与分享技术； <br>
+            2、对iOS开发有浓厚的兴趣，喜欢浏览CocoaChina，CSDN，code4App，开源中国，博客园，Swift中国，swiftgg等技术网站，并与其他人进行技术讨论来提升自己的技术水平； <br>
+            3、职业iOS项目开发，也有Android，H5，Flutter项目开发经验；<br>
+            4、有多个上线项目的经验，有较强的问题分析和bug调试的能力； <br>
+            5、具有较强的抗压能力和学习能力，对待工作认真负责，能够及时的完成公司交给的任务。<br>
+             5、个人网站：<a target="_blank" href="http://fishyan.me">https://fishyan.cn</a>
             </p>
 
           <div class="row">            
@@ -156,6 +157,28 @@
       <div class="nine columns main-col">
          <div class="education-timeline">
             <ul class="timeline wow fadeInUp">
+               <li class="timeline-event">
+                  <label class="timeline-event-icon"></label>
+                  <div class="timeline-event-copy">
+                    <p class="timeline-event-thumbnail"> 2017.00 -- 至今 </p>
+                    <h3>福建新大陆集团</h3>
+                    <h4>iOS开发工程师</h4>
+                    <p>
+                     1、负责公司产品“联营伙伴” iOS 平台项目的开发；<br>
+                     2、参与公司产品“联营伙伴” Android平台项目开发；<br>
+                     3、负责“合伙人”iOS 平台项目开发；<br>
+                     4、参与公司新大陆贷款 SDK，新大陆支付 SDK，新大陆分期 SDK；<br>
+                     5、参与“星管家” iOS 平台开发;<br>
+                     6、开发私有CocoaPod库：FYNetwork（公司通用网络库封装），Lvzhou（微信绿洲项目）；<br>
+                     7、负责“商户整改”，“支付宝蓝海项目” H5项目开发;<br>
+                     8、“商户邀请码”，“App隐私协议” Flutter项目开发;<br>
+                     9、参与项目需求分析，撰写可行性报告;<br>
+                     10、负责对app增加安全保护措施，及整理安全测试文档;<br>
+                     11、负责bug调试，修复，疑难问题的解决;<br>
+                     12、负责版本构建，产品上线;<br>
+                    </p>
+                  </div>
+                </li>
               <li class="timeline-event">
                 <label class="timeline-event-icon"></label>
                 <div class="timeline-event-copy">
@@ -171,33 +194,6 @@
                 </p>
                 </div>
               </li>
-              <li class="timeline-event">
-                <label class="timeline-event-icon"></label>
-                <div class="timeline-event-copy">
-                  <p class="timeline-event-thumbnail"> 2014.10 -- 2015.05 </p>
-                  <h3>郑州果悦科技公司</h3>
-                  <h4>iOS开发工程师</h4>
-                  <p>
-                     	1、负责iOS平台项目的开发，<br>
-                      2、参与项目需求分析，撰写可行性报告，<br>
-                      3、根据公司要求，撰写技术文档，<br>
-                      4、负责bug调试，修复，疑难问题的解决。<br>
-                      5、负责版本构建，产品上线，<br>
-                      6、开发项目包含音乐，视频，旅游类型用<br>
-                      上线项目：多彩音乐、LOVE游Pro。
-                  </p>
-                </div>
-              </li>
-              <!--<li class="timeline-event">
-                <label class="timeline-event-icon"></label>
-                <div class="timeline-event-copy">
-                  <p class="timeline-event-thumbnail">January 2000 - December 2006</p>
-                  <h3>School of Amusement</h3>
-                  <h4>O Level</h4>
-                  <p><strong>Grade A++</strong><br>
-                     Completed O Level from College of Amusement with and finished O Level with A++. Achieved the Principal Award for extra-ordinary result.</p>
-                </div>
-              </li>-->
             </ul>  
          </div> <!-- Education Timeline End --> 
       </div> <!-- main-col end -->
@@ -223,27 +219,8 @@
                   <p class="timeline-event-thumbnail"> 2011.09 -- 2015.06 </p>
                   <h3>河南工业大学</h3>
                   <h4>本科</h4>
-                  <!--<p>Donec ultrices faucibus rutrum. Phasellus sodales vulputate urna, vel accumsan augue egestas ac. Donec vitae leo at sem lobortis porttitor eu consequat risus. Mauris sed congue orci. Vestibulum gravida nulla nec justo congue, vitae sodales massa ullamcorper. </p>-->
                 </div>
               </li>
-              <!--<li class="timeline-event">
-                <label class="timeline-event-icon"></label>
-                <div class="timeline-event-copy">
-                  <p class="timeline-event-thumbnail">January 2006 - December 208</p>
-                  <h3>Awesome Softwares</h3>
-                  <h4>UI/UX Engineer</h4>
-                  <p> Donec ultrices faucibus rutrum. Phasellus sodales vulputate urna, vel accumsan augue egestas ac. Donec vitae leo at sem lobortis porttitor eu consequat risus. Mauris sed congue orci. Vestibulum gravida nulla nec justo congue, vitae sodales massa ullamcorper. </p>
-                </div>
-              </li>
-              <li class="timeline-event">
-                <label class="timeline-event-icon"></label>
-                <div class="timeline-event-copy">
-                  <p class="timeline-event-thumbnail">January 2000 - December 2006</p>
-                  <h3>Amazing Developers</h3>
-                  <h4>Front-End Developer</h4>
-                  <p>Donec ultrices faucibus rutrum. Phasellus sodales vulputate urna, vel accumsan augue egestas ac. Donec vitae leo at sem lobortis porttitor eu consequat risus. Mauris sed congue orci. Vestibulum gravida nulla nec justo congue, vitae sodales massa ullamcorper. </p>
-                </div>
-              </li>-->
             </ul>  
          </div> <!-- Work Timeline End --> 
          </div> <!-- main-col end -->
@@ -261,19 +238,20 @@
          <div class="nine columns main-col">
 
             <p>
-              专业： iOS 开发，擅长使用 Objective-C 和 Swift 开发 APP ，目前也在学习HTML和UWP开发
+              专业： iOS 开发，擅长使用 Objective-C 和 Swift 开发 APP ，也有Android, H5, Flutter项目开发经验
             </p>
 
         <div class="bars">
 
            <ul class="skills">
-            <li><span class="bar-expand photoshop wow fadeInLeft"></span><em>Objective-C</em></li>
-            <li><span class="bar-expand illustrator wow fadeInLeft"></span><em>Swift</em></li>
-            <li><span class="bar-expand wordpress wow fadeInLeft"></span><em>C</em></li>
-            <li><span class="bar-expand css wow fadeInLeft"></span><em>HTML</em></li>
-            <li><span class="bar-expand html5 wow fadeInLeft"></span><em>JavaScript</em></li>
-            <li><span class="bar-expand jquery wow fadeInLeft"></span><em>C#</em></li>
-            <li><span class="bar-expand XAML wow fadeInLeft"></span><em>XAML</em></li>
+            <li><span class="bar-expand objective-c wow fadeInLeft"></span><em>Objective-C</em></li>
+            <li><span class="bar-expand swift wow fadeInLeft"></span><em>Swift</em></li>
+            <li><span class="bar-expand android wow fadeInLeft"></span><em>Android</em></li>
+            <li><span class="bar-expand html5 wow fadeInLeft"></span><em>HTML</em></li>
+            <li><span class="bar-expand javascript wow fadeInLeft"></span><em>JavaScript</em></li>
+            <li><span class="bar-expand css wow fadeInLeft"></span><em>CSS</em></li>
+            <li><span class="bar-expand vue wow fadeInLeft"></span><em>Vue</em></li>
+            <li><span class="bar-expand flutter wow fadeInLeft"></span><em>Flutter</em></li>
           </ul>
 
         </div><!-- end skill-bars -->
@@ -293,17 +271,17 @@
          <div class="nine columns main-col">
 
              <p>
-              1、计算机语言：C、Objective-C、Swift等，可熟练运用Objective-C、Swift进行iOS编程；了解C#，XAML，HTML，JavaScript <br>
-              2、熟悉iOS平台的内存管理机制，熟悉内存优化；<br>
-              3、具有良好的面向对象编程思想，熟练运用多态、继承、封装，提高内聚，降低耦合，提高代码质量；<br>
-              4、具有良好的代码习惯，善于优化代码，对项目中产生的问题有较强的查找原因、解决问题的能力； 5、熟练运用MVC、MVVM等设计思想来搭建框架，善于使用模块化设计，使结构层次清晰易于维护；<br>
-              6、熟练运用Storyboard搭建应用界面，能熟练的解决约束冲突，屏幕适配的问题；<br>
-              7、熟练运用CocoaPods第三方类库管理工具来导入第三方，项目中使用过大部分常用第三方，具备快速上手第三方SDK使用的能力<br>
-              8、熟练运用NSThread、GCD、NSOperationQueue多线程技术进行编程以提高内存利用率和程序流畅度；<br>
-              9、熟练App开发到上架的整个流程，熟悉程序上传的步骤，以及版本的升级迭代；<br>
-              10、熟练运用SVN进行团队开发，解决冲突。熟练运用git命令，个人项目是用git仓库管理项目，熟练使用git终端命令，SourceTree，GithubDesktop；<br>
-              11、个人对 iOS 动画，控制器转场做有比较深入的研究；<br>
-              12、对产品业务逻辑的理解速度较快，具备较快的上手产品的能力。<br>
+               1、计算机语言：熟练运用Objective-C、Swift，熟悉Kotlin，HTML，JavaScript，css，Dart，可使用kotlin开发安卓项目，使用Vue进行前端开发，使用Flutter进行跨平台开发；<br>
+               2、熟悉iOS平台的内存管理机制，熟悉内存优化；<br>
+               3、具有良好的面向对象编程思想，熟练运用多态、继承、封装，提高内聚，降低耦合，提高代码质量；<br>
+               4、熟练运用MVC、MVVM等设计思想来搭建框架，善于使用模块化设计，使结构层次清晰易于维护；<br>
+               5、熟练运用Storyboard搭建应用界面，能熟练的解决约束冲突，屏幕适配的问题，也可使用frame，snap，masonry布局界面；<br>
+               6、熟练运用CocoaPods第三方类库管理工具来导入第三方，项目中使用过大部分常用第三方，具备快速上手第三方SDK使用的能力；<br>
+               7、熟练运用NSThread、GCD、NSOperationQueue多线程技术进行编程以提高内存利用率和程序流畅度；<br>
+               8、熟悉App安全，有通讯加密，App防调试，App环境监测，防注入工作经验；<br>
+               9、熟练App开发到上架的整个流程，熟悉程序上传的步骤，以及版本的升级迭代；<br>
+               10、有静态库，动态库，cocoapod库打包经验；<br>
+               11、熟练运用SVN进行团队开发，解决冲突。熟练运用git命令，个人项目是用git仓库管理项目，熟练使用git终端命令，SourceTree，GithubDesktop； <br>
           </p>
 
 			</div> <!-- main-col end -->
@@ -326,10 +304,43 @@
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf wow fadeIn">
 
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-01" title="联合营伙伴">
+                        <img alt="" src="myresume/images/lyhb.png">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>联营伙伴</h5>
+          					   </div>
+                        </div>
+                        <!--<div class="link-icon"><i class="fa fa-plus fa-2x"></i></div>-->
+                     </a>
+
+                  </div>
+          		</div> <!-- item end -->
+
+                <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-02" title="星POS管家">
+                        <img alt="" src="myresume/images/xgj.png">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+          					      <h5>星POS管家</h5>
+                              <!--<p>Webdesign</p>-->
+          					   </div>
+                        </div>
+                        <!--<div class="link-icon"><i class="fa fa-plus fa-2x"></i></div>-->
+                     </a>
+
+                  </div>
+          		</div> <!-- item end -->
+
           	   <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-01" title="超级车赢家">
+                     <a href="#modal-03" title="超级车赢家">
                         <img alt="" src="myresume/images/ydgzz.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -341,39 +352,7 @@
 
                   </div>
           		</div> <!-- item end -->
-
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-02" title="车赢家导购">
-                        <img alt="" src="myresume/images/cyjdg.png">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-          					      <h5>车赢家导购</h5>
-          					   </div>
-                        </div>
-                        <!--<div class="link-icon"><i class="fa fa-plus fa-2x"></i></div>-->
-                     </a>
-
-                  </div>
-          		</div> <!-- item end -->
-
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-03" title="荟购买家版">
-                        <img alt="" src="myresume/images/hg.png">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-          					      <h5>荟购买家版</h5>
-                              <!--<p>Webdesign</p>-->
-          					   </div>
-                        </div>
-                        <!--<div class="link-icon"><i class="fa fa-plus fa-2x"></i></div>-->
-                     </a>
-
-                  </div>
-          		</div> <!-- item end -->
+               
               <div class="columns portfolio-item">
                   <div class="item-wrap">
 
@@ -399,6 +378,77 @@
 	      =============================================== -->
 
          <div id="modal-01" class="popup-modal mfp-hide">
+            <center>
+              <img class="scale-with-grid" src="myresume/images/lyhb.png" width="100" alt="" />
+            </center>
+              <div class="description-box">
+                 <h3 align="center">联营伙伴</h3>
+              <h4>项目描述</h4>
+              <p>
+               联营伙伴APP为星POS的合作伙伴提供的移动办公的APP，合作伙伴可以在手机端快速完成商户录入、商户审核查询、商户信息查询等功能。可24小时移动办公。
+              </p>
+              <h4>项目职责：</h4>
+                    <p> 
+                     1.参与项目需求分析、评审，业务流程规划 。<br>
+                     2.进行APP的设计与开发，版本迭代与维护。<br>
+                     3.数据图表制作与数据展示<br>
+                     4.2018年底完成项目二次重构。<br>
+                     5.联营伙伴涉及技术点：<br>
+                     （1）相册选取、拍照，照片压缩与上传，<br>
+                     （2）实现定位及快速选择位置功能，<br>
+                     （3）支付宝支付功能（含主扫和被扫），<br>
+                     （4）微信好友和朋友圈分享集成，<br>
+                     （5）HTML 与原生交互（包含原生调用js方法传入参数和js调用原生方法传入参数），<br>
+                     （6）APP重构采用更适合项目的mvvm设计模式，设计更合理的model及更合理的业务逻辑，<br>
+                     （7）项目从Objective-C和swift混合开发重构为全swift开发。<br>
+                     （8）App安全：通讯加密，防调试，越狱检测，运行环境监测<br>
+                    </p>
+                 <!--<span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>-->
+              </div>
+  
+              <div class="link-box">
+                 <a target="_blank" href="https://apps.apple.com/cn/app/id1270607760" class="button">AppStore</a>
+                 <a class="popup-modal-dismiss button btn-close">Close</a>
+              </div>
+  
+           </div><!-- modal-01 End -->
+
+
+
+         <div id="modal-02" class="popup-modal mfp-hide">
+            <center>
+              <img class="scale-with-grid" src="myresume/images/xgj.png" width="100" alt="" />
+            </center>
+              <div class="description-box">
+              <h3 align="center">星POS管家</h3>
+              <h4>项目描述</h4>
+              <p>
+               星管家既能为商家提供记账、对账日常功能，还可以提供会员、促销活动、电子发票、远程管理店铺多种增值业务。帮助商家简化店铺管理，提升经营能力。
+              </p>
+                <h4>项目职责</h4>
+                    <p>
+                     1.参与项目设计，需求分析、评审，业务流程规划 。<br>
+                     2.进行APP的设计与开发。<br>
+                     3.星POS管家涉及技术点：<br>
+                     （1）相册选取、拍照，照片压缩与上传，<br>
+                     （2）实实现定位及快速选择位置功能，<br>
+                     （3）微信好友和朋友圈分享集成，<br>
+                     （4）HTML 与原生交互 （包含原生调用js方法传入参数和js调用原生方法传入参数），<br>
+                     （5）消息推送<br>
+                     （6）支付宝支付功能<br>
+                     （7）App安全：通讯加密，防调试，越狱检测，运行环境监测<br>
+                    </p>
+                <!--<span class="categories"><i class="fa fa-tag"></i>Branding</span>-->
+              </div>
+  
+              <div class="link-box">
+                 <a target="_blank" href="https://apps.apple.com/cn/app/星pos管家/id1259662141" class="button">AppStore</a>
+                 <a class="popup-modal-dismiss button btn-close">Close</a>
+              </div>
+  
+           </div><!-- modal-02 End -->
+
+         <div id="modal-03" class="popup-modal mfp-hide">
           <center>
 		      <img class="scale-with-grid" width="100" src="myresume/images/ydgzz.png" alt="" />
           </center>
@@ -430,69 +480,6 @@
 
             <div class="link-box">
                <a target="_blank" href="https://itunes.apple.com/cn/app/超级车赢家/id1154450676?mt=8" class="button">AppStore</a>
-		         <a class="popup-modal-dismiss button btn-close">Close</a>
-            </div>
-
-	      </div><!-- modal-01 End -->
-
-         <div id="modal-02" class="popup-modal mfp-hide">
-          <center>
-		      <img class="scale-with-grid" src="myresume/images/cyjdg.png" width="100" alt="" />
-          </center>
-		      <div class="description-box">
-			      <h3 align="center">车赢家导购</h3>
-            <h4>项目描述</h4>
-            <p>
-              车赢家导购是车杰盟早期研发的免费提供门店使用的移动端汽车服务平台。目前只做较小的功能更新
-            </p>
-            <h4>项目职责：</h4>
-                  <p> 
-                    1.参与项目开发和发布。 <br>
-                    2.新功能开发，版本升级迭代与维护。 <br>
-                    3.参与车赢家导购业务流程规划和客户需求分析。 <br>
-                    4.车赢家导购涉及技术点：<br>
-                    （1）作为工具类APP，最主要的是业务逻辑的处理 <br>
-                    （2）牌照识别，目前采用后台服务器识别。<br>
-                    （3）照片拍摄，上传，获取系统相册。<br>
-                    （4）蓝牙打印小票功能。<br>
-                    （5）使用LeanCloud推送<br>
-                  </p>
-               <!--<span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>-->
-		      </div>
-
-            <div class="link-box">
-               <a target="_blank" href="https://itunes.apple.com/cn/app/车赢家导购/id1025652457?mt=8" class="button">AppStore</a>
-		         <a class="popup-modal-dismiss button btn-close">Close</a>
-            </div>
-
-	      </div><!-- modal-02 End -->
-
-         <div id="modal-03" class="popup-modal mfp-hide">
-          <center>
-		      <img class="scale-with-grid" src="myresume/images/hg.png" width="100" alt="" />
-          </center>
-		      <div class="description-box">
-            <h3 align="center">荟购买家版</h3>
-            <h4>项目描述</h4>
-            <p>
-              车杰盟荟购采购平台是为汽车后服务市场定制开发的平台系统。依托于地域现有的品牌和渠道，遵循传统商业本质，同时融合了互联网传播优势。
-            </p>
-              <h4>项目职责</h4>
-                  <p>
-                    1.参与项目开发和发布。 <br>
-                    2.参与荟购的需求分析，业务流程规划 <br>
-                    3.荟购涉及技术点：<br>
-                    （1）集成 TouchID 登录验证<br>
-                    （2）使用keychain管理账号密码<br>
-                    （2）购物车的设计与实现<br>
-                    （3）用环信集成IM通讯功能<br>
-                    （4）支付宝支付功能，微信支付，银联支付。<br>
-                  </p>
-              <!--<span class="categories"><i class="fa fa-tag"></i>Branding</span>-->
-		      </div>
-
-            <div class="link-box">
-               <a target="_blank" href="https://itunes.apple.com/cn/app/荟购买家版/id1154383448?mt=8" class="button">AppStore</a>
 		         <a class="popup-modal-dismiss button btn-close">Close</a>
             </div>
 
@@ -602,7 +589,7 @@
 
                         <div>
                           <p>
-                            <img src="myresume/images/location.png" width="15px" height="15px"> 位置：武汉市 硚口区 云鹤小区 精品园
+                            <img src="myresume/images/location.png" width="15px" height="15px"> 位置：上海市 浦东新区 
                           </p>
       						   <!--<input type="text" placeholder="Subject" value="" size="35" id="contactSubject" name="contactSubject">-->
                         </div>
