--- a/resume.html
+++ b/resume.html
@@ -393,6 +393,40 @@
 
          <div id="modal-01" class="popup-modal mfp-hide">
             <center>
+               <img class="scale-with-grid" src="myresume/images/pjt.png" width="100" alt="" />
+            </center>
+            <div class="description-box">
+               <h3 align="center">拍机堂</h3>
+               <h4>项目描述</h4>
+               <p>
+                  拍机堂打造商家生态系统与行业基础设施，其运营体系保障平台货源足、品类全、价格优、周转快，实现货品跨区域流通，改变了过去二手3C产品传统的统货、现货、依赖经验的交易方式，极大提高了二手3C产品流通效率。
+               </p>
+               <h4>项目职责：</h4>
+               <p>
+                  1.参与项目需求分析、评审，移交等 。<br>
+                  2.进行APP的设计与开发，版本迭代与维护。<br>
+                  3.私有库组件（PJTDesign，PJTCheckMotion）开发维护。<br>
+                  4.参与部分RN项目开发（维修美容，询价VIP）。<br>
+                  5.拍机堂伴涉及技术点：<br>
+                  （1）UI组件封装，<br>
+                  （2）事件监听及打点功能，<br>
+                  （3）扫码库识别效率优化，<br>
+                  （4）路由设计，<br>
+                  （5）网络监控。<br>
+               </p>
+               <!--<span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>-->
+            </div>
+
+            <div class="link-box">
+               <a target="_blank" href="https://apps.apple.com/cn/app/id1369798264" class="button">AppStore</a>
+               <a class="popup-modal-dismiss button btn-close">Close</a>
+            </div>
+
+         </div><!-- modal-01 End -->
+
+
+         <div id="modal-01" class="popup-modal mfp-hide">
+            <center>
                <img class="scale-with-grid" src="myresume/images/lyhb.png" width="100" alt="" />
             </center>
             <div class="description-box">
@@ -403,19 +437,15 @@
                </p>
                <h4>项目职责：</h4>
                <p>
-                  1.参与项目需求分析、评审，业务流程规划 。<br>
-                  2.进行APP的设计与开发，版本迭代与维护。<br>
-                  3.数据图表制作与数据展示<br>
-                  4.2018年底完成项目二次重构。<br>
-                  5.联营伙伴涉及技术点：<br>
+                  1、参与项目需求分析、评审，业务流程规划 。<br>
+                  2、进行APP的设计与开发，版本迭代与维护。<br>
+                  3、数据图表制作与数据展示。<br>
+                  4、2018年底完成项目二次重构。<br>
+                  5、联营伙伴涉及技术点：<br>
                   （1）相册选取、拍照，照片压缩与上传，<br>
                   （2）实现定位及快速选择位置功能，<br>
-                  （3）支付宝支付功能（含主扫和被扫），<br>
-                  （4）微信好友和朋友圈分享集成，<br>
-                  （5）HTML 与原生交互（包含原生调用js方法传入参数和js调用原生方法传入参数），<br>
-                  （6）APP重构采用更适合项目的mvvm设计模式，设计更合理的model及更合理的业务逻辑，<br>
-                  （7）项目从Objective-C和swift混合开发重构为全swift开发。<br>
-                  （8）App安全：通讯加密，防调试，越狱检测，运行环境监测<br>
+                  （3）HTML 与原生交互（包含原生调用js方法传入参数和js调用原生方法传入参数），<br>
+                  （4）App安全：通讯加密，防调试，越狱检测，运行环境监测。<br>
                </p>
                <!--<span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>-->
             </div>
@@ -426,8 +456,6 @@
             </div>
 
          </div><!-- modal-01 End -->
-
-
 
          <div id="modal-02" class="popup-modal mfp-hide">
             <center>
@@ -445,12 +473,9 @@
                   2.进行APP的设计与开发。<br>
                   3.星POS管家涉及技术点：<br>
                   （1）相册选取、拍照，照片压缩与上传，<br>
-                  （2）实实现定位及快速选择位置功能，<br>
-                  （3）微信好友和朋友圈分享集成，<br>
-                  （4）HTML 与原生交互 （包含原生调用js方法传入参数和js调用原生方法传入参数），<br>
-                  （5）消息推送<br>
-                  （6）支付宝支付功能<br>
-                  （7）App安全：通讯加密，防调试，越狱检测，运行环境监测<br>
+                  （2）HTML 与原生交互 （包含原生调用js方法传入参数和js调用原生方法传入参数），<br>
+                  （3）支付宝支付功能，<br>
+                  （4）App安全：通讯加密，防调试，越狱检测，运行环境监测。<br>
                </p>
                <!--<span class="categories"><i class="fa fa-tag"></i>Branding</span>-->
             </div>
@@ -475,19 +500,14 @@
                </p>
                <h4>项目职责：</h4>
                <p>
-                  1.参与项目规划，及可行性研究，需求分析。<br>
-                  2.参与撰写希求文档，原型设计。<br>
-                  3.负责项目开发和发布，版本升级迭代与维护。<br>
-                  4.参与超级车赢家业务流程规划和客户需求分析。<br>
-                  5.超级车赢家涉及技术点：<br>
+                  1.初期参与项目规划，及可行性研究，需求分析，参与撰写希求文档，原型设计。<br>
+                  2.负责项目开发和发布，版本升级迭代与维护。<br>
+                  3.参与超级车赢家业务流程规划和客户需求分析。<br>
+                  4.超级车赢家涉及技术点：<br>
                   （1）js与原生交互（用于开发图表）。<br>
-                  （2）牌照识别，目前搭建后台服务器识别。<br>
-                  （3）照片拍摄，上传，获取系统相册。<br>
-                  （4）蓝牙打印小票功能。<br>
-                  （5）使用环信集成即时通讯功能。<br>
-                  （6）使用LeanCloud推送<br>
-                  （7）集成百度地图，实现APP定位签到功能。<br>
-                  （8）自定义转场。
+                  （2）牌照识别，早期使用内置识别库进行识别，目前搭建后台服务器识别。<br>
+                  （3）蓝牙打印小票功能。<br>
+                  （4）使用环信集成IM通讯功能。<br>
                </p>
                <!--<span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>-->
             </div>
@@ -499,37 +519,6 @@
             </div>
 
          </div><!-- modal-03 End -->
-
-         <div id="modal-04" class="popup-modal mfp-hide">
-            <center>
-               <img class="scale-with-grid" src="myresume/images/oa.png" width="100" alt="" />
-            </center>
-            <div class="description-box">
-               <h3 align="center">车杰盟移动互联</h3>
-               <h4>项目描述</h4>
-               <p>
-                  目的在于拓展办公空间，可随时随地处理办公事务。
-               </p>
-               <h4>项目职责</h4>
-               <p>
-                  1.参与项目开发和发布。 <br>
-                  2.参与车杰盟移动互联的设计，需求分析，业务流程规划 <br>
-                  3.车杰盟移动互联涉及技术点：<br>
-                  （1）相册选取与拍照<br>
-                  （2）使用百度地图SDK实现位置签到功能<br>
-                  （3）自定义日历控件<br>
-               </p>
-               <!--<span class="categories"><i class="fa fa-tag"></i>Photography</span>-->
-            </div>
-
-            <div class="link-box">
-               <a target="_blank" href="https://itunes.apple.com/cn/app/车杰盟移动互联/id1138275784?mt=8"
-                  class="button">AppStore</a>
-               <a class="popup-modal-dismiss button btn-close">Close</a>
-            </div>
-
-         </div><!-- modal-04 End -->
-
 
 
       </div> <!-- row End -->
