--- a/resume.html
+++ b/resume.html
@@ -166,7 +166,7 @@
                   <li class="timeline-event">
                      <label class="timeline-event-icon"></label>
                      <div class="timeline-event-copy">
-                        <p class="timeline-event-thumbnail"> 2021.00 -- 至今 </p>
+                        <p class="timeline-event-thumbnail"> 2021.03 -- 至今 </p>
                         <h3>万物新生集团（爱回收）</h3>
                         <h4>iOS开发工程师</h4>
                         <p>
@@ -180,7 +180,7 @@
                   <li class="timeline-event">
                      <label class="timeline-event-icon"></label>
                      <div class="timeline-event-copy">
-                        <p class="timeline-event-thumbnail"> 2017.00 -- 至今 </p>
+                        <p class="timeline-event-thumbnail"> 2017.09 -- 2021.03 </p>
                         <h3>福建新大陆集团</h3>
                         <h4>iOS开发工程师</h4>
                         <p>
@@ -195,7 +195,7 @@
                   <li class="timeline-event">
                      <label class="timeline-event-icon"></label>
                      <div class="timeline-event-copy">
-                        <p class="timeline-event-thumbnail"> 2015.08 -- 至今 </p>
+                        <p class="timeline-event-thumbnail"> 2015.08 -- 2017.08 </p>
                         <h3>重庆车杰盟科技有限公司</h3>
                         <h4>iOS开发工程师</h4>
                         <p>
@@ -317,11 +317,26 @@
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf wow fadeIn">
-
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="联合营伙伴">
+                        <img alt="" src="myresume/images/pjt.png">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                              <h5>拍机堂</h5>
+                           </div>
+                        </div>
+                        <!--<div class="link-icon"><i class="fa fa-plus fa-2x"></i></div>-->
+                     </a>
+
+                  </div>
+               </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-02" title="联合营伙伴">
                         <img alt="" src="myresume/images/lyhb.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -337,7 +352,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-02" title="星POS管家">
+                     <a href="#modal-03" title="星POS管家">
                         <img alt="" src="myresume/images/xgj.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -354,7 +369,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
-                     <a href="#modal-03" title="超级车赢家">
+                     <a href="#modal-04" title="超级车赢家">
                         <img alt="" src="myresume/images/ydgzz.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
@@ -367,22 +382,6 @@
                   </div>
                </div> <!-- item end -->
 
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-04" title="车杰盟移动互联">
-                        <img alt="" src="myresume/images/oa.png">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>车杰盟移动互联</h5>
-                              <!--<p>Webdesign</p>-->
-                           </div>
-                        </div>
-                        <!--<div class="link-icon"><i class="fa fa-plus fa-2x"></i></div>-->
-                     </a>
-
-                  </div>
-               </div> <!-- item end -->
             </div> <!-- portfolio-wrapper end -->
 
          </div> <!-- twelve columns end -->
@@ -425,7 +424,7 @@
          </div><!-- modal-01 End -->
 
 
-         <div id="modal-01" class="popup-modal mfp-hide">
+         <div id="modal-02" class="popup-modal mfp-hide">
             <center>
                <img class="scale-with-grid" src="myresume/images/lyhb.png" width="100" alt="" />
             </center>
@@ -457,7 +456,7 @@
 
          </div><!-- modal-01 End -->
 
-         <div id="modal-02" class="popup-modal mfp-hide">
+         <div id="modal-03" class="popup-modal mfp-hide">
             <center>
                <img class="scale-with-grid" src="myresume/images/xgj.png" width="100" alt="" />
             </center>
@@ -487,7 +486,7 @@
 
          </div><!-- modal-02 End -->
 
-         <div id="modal-03" class="popup-modal mfp-hide">
+         <div id="modal-04" class="popup-modal mfp-hide">
             <center>
                <img class="scale-with-grid" width="100" src="myresume/images/ydgzz.png" alt="" />
             </center>
