--- a/resume.html
+++ b/resume.html
@@ -127,7 +127,7 @@
                   3、职业iOS项目开发，也有 Android，H5，Flutter，RN 项目开发经验；<br>
                   4、有多个上线项目的经验，有较强的问题分析和bug调试的能力； <br>
                   5、具有较强的抗压能力和学习能力，对待工作认真负责，能够及时的完成公司交给的任务。<br>
-                  5、个人网站：<a target="_blank" href="http://fishyan.me">https://fishyan.cn</a>
+                  5、个人网站：<a target="_blank" href="https://fish-yan.github.io/resume.html">https://fish-yan.github.io/resume.html</a>
                </p>
 
                <div class="row">
@@ -166,7 +166,21 @@
                   <li class="timeline-event">
                      <label class="timeline-event-icon"></label>
                      <div class="timeline-event-copy">
-                        <p class="timeline-event-thumbnail"> 2021.03 -- 至今 </p>
+                        <p class="timeline-event-thumbnail"> 2022.09 -- 至今 </p>
+                        <h3>分布科技（OnChain）</h3>
+                        <h4>iOS开发工程师</h4>
+                        <p>
+                           1、负责公司产品“ONTO”钱包 iOS 平台的开发；<br>
+                           2、主要负责区块链接入、钱包创建、导入流程重构优化，Swap交易、NFT交易、dApp接入工作；<br>
+                           3、负责bug调试，修复，疑难问题的解决了；<br>
+                           4、负责版本构建，产品上线；<br>
+                        </p>
+                     </div>
+                  </li>
+                  <li class="timeline-event">
+                     <label class="timeline-event-icon"></label>
+                     <div class="timeline-event-copy">
+                        <p class="timeline-event-thumbnail"> 2021.03 -- 2022.09 </p>
                         <h3>万物新生集团（爱回收）</h3>
                         <h4>iOS开发工程师</h4>
                         <p>
@@ -199,11 +213,7 @@
                         <h3>重庆车杰盟科技有限公司</h3>
                         <h4>iOS开发工程师</h4>
                         <p>
-                           1.车赢家导购研发，版本升级迭代（已发21个版本）。<br>
-                           2.超级车赢家（公司大型平台级APP）研发，版本升级迭代（已发9个版本）。<br>
-                           3.车杰盟移动互联研发（公司内部OA）。<br>
-                           4.车杰盟荟购买家版开发（团队项目）（已发10个版本）。<br>
-                           5.进行项目需求分析，业务流程规划，参与项目原型设计，产品研发，撰写技术文档。
+                           1.车赢家导购。超级车赢家（公司大型平台级APP）、车杰盟移动互联研发（公司内部OA）、车杰盟荟购买家版开发（团队项目）。
                         </p>
                      </div>
                   </li>
@@ -317,6 +327,23 @@
 
             <!-- portfolio-wrapper -->
             <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf wow fadeIn">
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-04" title="ONTO">
+                        <img alt="" src="myresume/images/onto.png">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                              <h5>ONTO</h5>
+                           </div>
+                        </div>
+                        <!--<div class="link-icon"><i class="fa fa-plus fa-2x"></i></div>-->
+                     </a>
+
+                  </div>
+               </div> <!-- item end -->
+
                <div class="columns portfolio-item">
                   <div class="item-wrap">
 
@@ -358,22 +385,6 @@
                            <div class="portfolio-item-meta">
                               <h5>星POS管家</h5>
                               <!--<p>Webdesign</p>-->
-                           </div>
-                        </div>
-                        <!--<div class="link-icon"><i class="fa fa-plus fa-2x"></i></div>-->
-                     </a>
-
-                  </div>
-               </div> <!-- item end -->
-
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-04" title="超级车赢家">
-                        <img alt="" src="myresume/images/ydgzz.png">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>超级车赢家</h5>
                            </div>
                         </div>
                         <!--<div class="link-icon"><i class="fa fa-plus fa-2x"></i></div>-->
@@ -488,31 +499,31 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
             <center>
-               <img class="scale-with-grid" width="100" src="myresume/images/ydgzz.png" alt="" />
+               <img class="scale-with-grid" width="100" src="myresume/images/onto.png" alt="" />
             </center>
             <div class="description-box">
-               <h3 align="center">超级车赢家</h3>
+               <h3 align="center">ONTO</h3>
                <h4>项目描述</h4>
                <p>
-                  超级车赢家是车杰盟研发的，针对门店内部管理运营的系统。<br>
-                  超级车赢家采用模块化设计，各功能灵活配置，终端门店可以根据自身具体情况，匹配相应的店面管理运营解决方案；
+                  ONTO 是第一个真正去中心化的跨链钱包，允许用户安全地管理他们的身份、数据和数字资产。 钱包用户可以管理他们的加密资产（包括 NFT），进行跨链交换，通过 ONTO 新闻源了解区块链和加密行业的最新动态和事件，并享受各种 dApp。
                </p>
                <h4>项目职责：</h4>
                <p>
-                  1.初期参与项目规划，及可行性研究，需求分析，参与撰写希求文档，原型设计。<br>
-                  2.负责项目开发和发布，版本升级迭代与维护。<br>
-                  3.参与超级车赢家业务流程规划和客户需求分析。<br>
-                  4.超级车赢家涉及技术点：<br>
-                  （1）js与原生交互（用于开发图表）。<br>
-                  （2）牌照识别，早期使用内置识别库进行识别，目前搭建后台服务器识别。<br>
-                  （3）蓝牙打印小票功能。<br>
-                  （4）使用环信集成IM通讯功能。<br>
+                  1.参与项目需求分析、评审，移交等 。<br>
+                  2.进行APP的设计与开发，版本迭代与维护。<br>
+                  3.APP钱包导入模块重构设计。<br>
+                  4.ONTO钱包涉及技术点：<br>
+                  （1）区块链接入，<br>
+                  （2）钱包创建、导入、交易，<br>
+                  （3）区块链数据加密解密，<br>
+                  （4）KeyChain存储，<br>
+                  （5）多线程运用。<br>
                </p>
                <!--<span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>-->
             </div>
 
             <div class="link-box">
-               <a target="_blank" href="https://itunes.apple.com/cn/app/超级车赢家/id1154450676?mt=8"
+               <a target="_blank" href="https://apps.apple.com/us/app/onto-an-ontology-dapp/id1436009823"
                   class="button">AppStore</a>
                <a class="popup-modal-dismiss button btn-close">Close</a>
             </div>
