--- a/resume.html
+++ b/resume.html
@@ -84,20 +84,20 @@
 
       <!-- Social Section
    ================================================== -->
-      <!--<div id="social">
+      <div id="social">
       <div class="row social-container">
             <ul class="social">
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-github"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+               <!-- <li><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
+               <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
+               <li><a href="https://github.com/fish-yan/"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://blog.csdn.net/fish_yan_"><i class="fa fa-csdn"></i></a></li>
+               <!-- <li><a href="#"><i class="fa fa-skype"></i></a></li> -->
             </ul>
       </div>
 
-   </div> -->
+   </div>
       <!-- Social End -->
 
    </header> <!-- Header End -->
@@ -127,7 +127,7 @@
                   3、职业iOS项目开发，也有 Android，H5，Flutter，RN 项目开发经验；<br>
                   4、有多个上线项目的经验，有较强的问题分析和bug调试的能力； <br>
                   5、具有较强的抗压能力和学习能力，对待工作认真负责，能够及时的完成公司交给的任务。<br>
-                  5、个人网站：<a target="_blank" href="https://fish-yan.github.io/resume.html">https://fish-yan.github.io/resume.html</a>
+                  5、个人网站：<a target="_blank" href="https://fish-yan.github.io">https://fish-yan.github.io</a>
                </p>
 
                <div class="row">
